add html to match image

--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML test pages for CSS</title>
 </head>
 <body>
-    
+    <style>
+    a:active{
+            color:blue;
+        }
+        a:hover{
+            color: pink;
+        }
+  
+        </style>
+    <h1><strong>H1 = Heading 1</strong></h1>
+    <p>This is a paragraph  (&lt;P>).IMHO, it makes sense to have veritcal spacing between header elements and paragraphs.</p>
+    <p>This is also a paragraph.</p>
+    <p>Line 1 : This is a paragraph with four lines but:<br>Line 2: It has self-terminating<br>Line 3: line ebreaks (&lt;br/>) at <br> Line 4: the end of every line.</p>
+    <br>
+    You might want to use the &lt;br/> tag for multi-line list items like this:
+   
+    <h3><strong>Related Posts:</strong></h3><ol>
+        <li style = "padding-bottom: 5px;"><a href ="https://www.w3schools.com/html/html_links_colors.asp">W3C Recommendation 24 December 1999</a> (NB: visited/clicked links(like this one) and unlisted/unclicked links should look different) HTML 4.01 Specification</li>
+        <li style = "padding-bottom: 5px;"><a href ="https://www.w3schools.com/html/html_links_colors.asp">HTML Demo Page</a>(NB visted/clicked(like this one)should look different) by Andrew Bedno</li>
+        <li style = "padding-bottom: 5px;"><a href = "https://www.w3schools.com/html/html_links_colors.asp">Everything You Know About Website Design is Right</a>(9/1/2004)<br>No it's not. Everything you know about website desgin is wrong.</li>
+        <li style = "padding-bottom: 5px;"><a href="https://www.w3schools.com/html/html_links_colors.asp">Designing Good Internet Experiences</a>(1/2/1998)<br>The internet will remain out of the reach of many consumers until computers are as easy to ue as lamps.
+        </li>
+    </ol>
+    <h2><strong> H2 = Heading 2</strong></h2>
+    <p>This is a paragraph. IMHO, it amkes sense to have veritcal spacing between header elements and paragraphs.<br> This is also a paragraph</p>
+
+    <h3><strong>H3 = Heading 3</strong></h3>
+    <p>This is a paragraph. IMHO, it amkes sense to have veritcal spacing between header elements and paragraphs.<br> This is also a paragraph</p>
 </body>
 </html>
